# fin_buddy1

./: 2023Q4_Sheet1.xlsx  README.md  csv_artifact_v4_2_phases.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_dev.bat  tailwind.config.ts  theme.json
client/: index.html
client/src/: App.tsx
gen_scripts_csv_arti_v2_4/generated_20250519_145034/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_150816/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_151429/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_162624/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_163450/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_164155/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_164648/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_165217/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_170114/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_173216/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250519_180407/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250520_101140/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250520_110002/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250520_110709/: ques_1_phase_1.py
gen_scripts_csv_arti_v2_4/generated_20250520_110744/: ques_1_phase_1.py
python_backend/: financial_data_analysis_app.py  main.py
python_backend/services/: __init__.py  (+2 more)
server/: index.ts  routes.ts
shared/: schema.ts
(+139 files in other folders)
